# mager

./: .gitignore  Cargo.toml
dto/: Cargo.toml
dto/src/: lib.rs
logs/: mager.log.2024-10-17-04  mager.log.2024-10-17-07  mager.log.2024-10-17-10  mager.log.2024-10-17-11
mager/: Cargo.toml
mager-tui/: Cargo.toml
mager-tui/src/: actions.rs  app.rs  components.rs  mager.rs  main.rs  runner.rs  source.rs  tui.rs  utils.rs
mager-tui/src/components/: chapter_list.rs  manga_desc_page.rs  manga_details_page.rs  manga_list.rs  manga_list_page.rs  mangas_page.rs  search_bar.rs  source_list.rs  source_list_page.rs  sources_page.rs
mager/src/: mager.rs  main.rs  manga.rs  utils.rs
release/sources/: mangadex
sources/mangadex/: Cargo.toml
sources/mangadex/src/: main.rs  mangadex.rs
sources/mangadex/src/mangadex/: enums.rs  error.rs  query.rs  schema.rs
