[package]
name = "mager-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
dto = { path = "../dto" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
reqwest = { version = "0.12.5", features = ["stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
color-eyre = "0.6.3"
futures = "0.3.30"
bytes = "1.7.1"
ratatui = "0.28.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
