[package]
name = "mager"
version = "0.1.0"
edition = "2021"

[dependencies]
dto = { path = "../dto" }
clap = { version = "4.5.13", features = ["derive"] }
serde = "1.0.204"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
bytes = "1.7.0"
reqwest = "0.12.5"
termion = "4.0.2"
ratatui = "0.27.0"
