[package]
name = "mangadex"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_qs = "0.13.0"
tokio = { version = "1.38.1", features = ["full"] }
dto = { path = "../../dto" }
